--- a/website/package.json
+++ b/website/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "sha1": "^1.1.1",
     "styled-components": "^6.1.9",
     "web-vitals": "^2.1.4"
   },
