--- a/website/package.json
+++ b/website/package.json
@@ -7,14 +7,22 @@
     "@cloudinary/url-gen": "^1.19.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mdi/js": "^7.4.47",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "buffer": "^6.0.3",
     "react": "^18.3.1",
+    "react-awesome-reveal": "^4.2.11",
     "react-dom": "^18.3.1",
+    "react-fontawesome": "^1.7.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "sha1": "^1.1.1",
